--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
 .background {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 80px;
+  padding: 60px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -172,6 +172,10 @@ textarea {
   border: 1px solid #6a717c;
   border-radius: 4px;
   margin-top: 8px;
+  margin-bottom: 12px;
+}
+p{
+  margin-bottom: 8px;
 }
 .primary__button {
   background-color: var(--activeblue);
@@ -201,7 +205,6 @@ label {
 #test-box {
   width: 100%;
   position: relative;
-  padding: 20px;
 }
 .image {
   width: 500px;
@@ -217,8 +220,9 @@ label {
   color: var(--gray);
   max-width: 320px;
   font-size: 15px;
+  line-height: 24px;
   top: 53%;
-  left: 21%;
+  left: 18%;
   text-align: center;
 }
 @media screen and (max-width: 425px) {
